<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wallpaper_refreshing">Quart</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="board_url">Board Location</string>
    <string name="board_url_summary">Where the images will be from</string>
    <string name="board_dialog">Accepted formats:\n[URL]\n[Board ID]\n[Username], [Board Name]\n[Search Term]</string>
    <string name="default_board">http://www.pinterest.com/pandemoniumvp/cars/</string>
    <string name="frequency">Update Frequency</string>
    <string name="frequency_summary">How often a new picture is fetched</string>

    <string-array name="entries">
        <item>5 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    
    <string name="default_frequency">5</string>
    <string-array name="entry_values">
        <item>5</item>
        <item>60</item>
        <item>300</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>216000</item>
        <item>432000</item>
        <item>864000</item>
    </string-array>
    
    <string name="saved">New board saved!</string>
</resources>
